# optsail

./: .gitignore  Makefile  README.md  pytest.ini  requirements.txt  setup.cfg
optsail/: chart.py  classes.py  data.py  environment.py  grib.py  performance.py  polars.py  utils.py
tests/: test_chart.py  test_grib.py  test_polars.py  testing_utils.py
tests/polars/: OD65v3.txt  first_317.txt  maxi_100.txt  vo70.txt  vo70_sol.txt
