[metadata]
name = qcommon
version = 0.0.4
author = Jaap Versteegh
author_email = jversteegh@quebble.com
url = https://git.quebble.com/microservices/quebble-common
description = Common package for shared objects and functionality.

[options]
packages = find:
python_requires = >= 3.7
zip_safe = False
include_package_data = True
platforms = any
install_requires =
  aiofiles == 0.6.0
  aiohttp == 3.7.2
  aioredis == 1.3.1
  async_property == 0.2.1
  cryptography == 3.2.1
  email-validator == 1.1.1
  fastapi == 0.61.1
  fastapi_utils == 0.2.1
  gino == 1.0.1
  python-dateutil == 2.8.1
  python-jose == 3.2.0
  sentry-sdk == 0.19.1
  sqlalchemy_utils == 0.36.8
  ujson == 4.0.1
  # TODO remove in favor of python-jose
  pyjwt
 
[pycodestyle]
# Too many blank lines is ok with me
ignore = E303 
# Default of 80 somewhat pedantic
max-line-length = 96

[flake8]
# Too many blank lines is ok with me
ignore = E303 
# Default of 80 somewhat pedantic
max-line-length = 96
